# sealed-auction

./: .gitignore  Anchor.toml  DEV.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
app/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/app/auction/: page.tsx
app/app/create-auction/: layout.tsx  page.tsx
app/app/discover/: page.tsx
app/app/private-auction/: page.tsx
app/components/: AuctionArtImage.tsx  BackgroundStreaks.tsx  SiteFooter.tsx  SiteHeader.tsx  SiteHeaderWallet.tsx  SolanaWalletProvider.tsx
app/components/create-auction/: ImageUpload.tsx  (+3 more)
app/lib/: anchorWallet.ts  auctionConfigDecode.ts  auctionTimes.ts  commitmentStorage.ts  config.ts  crypto.ts  data.ts  explorer.ts  format.ts  metadataUriFromInitTx.ts  onchainAuction.ts  onchainListingStorage.ts  pdas.ts  pinataClient.ts  program.ts  programAuctions.ts  rpc.ts  sealed_auction_program.json  solana.ts  tee.ts  types.ts  walletErrors.ts
app/types/: sealed_auction_program.ts
programs/sealed-auction/: Cargo.toml  README.md
programs/sealed-auction/src/: accounts.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/sealed-auction/src/instructions/: commit.rs  delegate_ix.rs  initialize.rs  mod.rs  private_ix.rs  reveal.rs  settle.rs
tests/: 01-crypto-parity.ts  02-public-negative.ts  03-public-e2e.ts  04-private-negative.ts  05-private-e2e.ts  06-cross-mode.ts  07-public-windows.ts  fixture.ts  helpers.ts  sealed-auction.ts  test-utils.ts
(+22 files in other folders)
